--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
     "next": "13.3.1",
     "postcss": "8.4.23",
