--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.2",
+    "recharts": "^2.5.0",
     "tailwindcss": "3.3.1"
   }
 }
